# dased

./: .gitignore  README.md  main.py  pyproject.toml  readthedocs.yml  test.py  test_knot_conversion.py
dased/: __init__.py  __main__.py  layout.py  optimisation.py
dased/criteria/: __init__.py  eig.py  raysense.py
dased/helpers/: __init__.py
dased/helpers/srcloc/: __init__.py  data_likelihood.py  distributions.py  forward.py  magnitude_relation.py  posterior.py
docs/: api_reference.rst  conf.py  index.rst  tutorials.rst
docs/static/: custom.css
docs/tutorials/: 01_introduction_to_das_layouts.ipynb
tests/: test_layout.py
