[project]
name = "dased"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.9.0", # below 2.0 for pyrocko compatibility
    "xarray>=2025.6.1",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "matplotlib>=3.10.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "geopandas>=1.1.1",
    "joblib>=1.5.1",
    "cloudpickle>=3.1.1",
    "pip>=25.1.1",
    "geobed",
    "pygmo>=2.19.0",
    "ttcrpy>=1.3.9",
    "vtk>=9.5.1",
]

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "myst-nb>=1.3.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.0",
]

[tool.uv.sources]
geobed = { git = "https://github.com/dominik-strutz/GeoBED" }